Prevent flicker on load

--- a/PhotoDB/photodb/apps/photodb/static/photodb/css/base.css
+++ b/PhotoDB/photodb/apps/photodb/static/photodb/css/base.css
@@ -38,3 +38,6 @@ a{
 .modal-footer{
     border-top-color: #777;
 }
+[v-cloak] {
+    display: none;
+}
